--- a/views/vacation.html
+++ b/views/vacation.html
@@ -1,10 +1,9 @@
-﻿<div style="margin:20px 20px 20px 20px">
-    <h4>Request Vacation</h4>
+﻿<div class="vacation_Outterdiv">
+    <h2>Request Vacation</h2>
     <div class="vacation_table" style="padding:20px 20px 20px 20px">
 
 
-        <!--<p>{{datePicker || "00/00/0000"}}</p>
-        <input type="text" ng-model="datePicker" datepicker />-->
+
 
         <table>
             <tr>
@@ -62,7 +61,7 @@
     </div>
 
 
-    <h4>My History</h4>
+    <h2>My History</h2>
     <table class="gridtable">
         <thead>
             <tr>
@@ -85,4 +84,4 @@
             </tr>
         </tbody>
     </table>
-</div>nh
+</div>
