--- a/shared/styles/style.css
+++ b/shared/styles/style.css
@@ -1,9 +1,20 @@
-﻿#header {
+﻿html, body
+{
+    height: 100%;
+    margin-top:0px;
+    margin-bottom:0px;
+}
+#header {
     background-color: #97C9DD;
     color: white;
     /*background-image: url('../../images/header.jpg');*/
     text-align: center;
-    padding: 50px;
+    height:100px;
+}
+#header h1 {
+    margin:0px;
+    padding: 30px;
+
 }
 
 #nav {
@@ -16,10 +27,11 @@
     color: white;
     font-size: 20px;
     font-weight: bold;
+    height:100%;
 }
 
 #section {
-    width: 80%;
+    width: 79%;
     float: left;
     padding: 10px;
 }
@@ -30,8 +42,13 @@
     clear: both;
     text-align: center;
     padding: 5px;
+    height: 30px;
 }
 
+#footer p {
+    margin:0px;
+    padding-top:7px;
+}
 ul {
     list-style-type: none;
     margin: 0;
@@ -54,4 +71,118 @@ a, a:visited, a.hover, a:active {
 .menu li{
     padding-bottom:10px;
 }
- 
+.Table
+    {
+        display: table;
+    }
+    .Title
+    {
+        display: table-caption;
+        text-align: center;
+        font-weight: bold;
+        font-size: larger;
+    }
+    .Heading
+    {
+        display: table-row;
+        font-weight: bold;
+        text-align: center;
+        background-color:#97C9DD;
+    }
+    .Row
+    {
+        display: table-row;
+    }
+    .Cell
+    {
+        display: table-cell;
+        border: solid;
+        border-width: thin;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    /* Search panel style starts*/
+    .form-wrapper {
+    width: 450px;
+    padding: 8px;
+    margin: 20px auto;
+    overflow: hidden;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #dedede #bababa #aaa #bababa;
+    box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444;
+    border-radius: 10px;    
+    background-color: #f6f6f6;
+    background-image: linear-gradient(top, #f6f6f6, #eae8e8);
+    float:left;
+}
+
+.form-wrapper #search {
+    width: 330px;
+    height: 20px;
+    padding: 10px 5px;
+    float: left;    
+    font: bold 16px 'lucida sans', 'trebuchet MS', 'Tahoma';
+    border: 1px solid #ccc;
+    box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #fff;
+    border-radius: 3px;      
+}
+
+.form-wrapper #search:focus {
+    outline: 0; 
+    border-color: #aaa;
+    box-shadow: 0 1px 1px #bbb inset;  
+}
+
+.form-wrapper #search::-webkit-input-placeholder {
+   color: #999;
+   font-weight: normal;
+}
+
+.form-wrapper #search:-moz-placeholder {
+    color: #999;
+    font-weight: normal;
+}
+
+.form-wrapper #search:-ms-input-placeholder {
+    color: #999;
+    font-weight: normal;
+} 
+
+.form-wrapper #submit {
+    float: right;    
+    border: 1px solid #00748f;
+    height: 42px;
+    width: 100px;
+    padding: 0;
+    cursor: pointer;
+    font: bold 15px Arial, Helvetica;
+    color: #fafafa;
+    text-transform: uppercase;    
+    background-color: #81A2C4;
+    background-image: linear-gradient(top, #31b2c3, #0483a0);
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;      
+    text-shadow: 0 1px 0 rgba(0, 0 ,0, .3);
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.3) inset, 0 1px 0 #fff;
+}
+  
+.form-wrapper #submit:hover,
+.form-wrapper #submit:focus {       
+    background-color: #31b2c3;
+    background-image: linear-gradient(top, #0483a0, #31b2c3);
+}   
+  
+.form-wrapper #submit:active {
+    outline: 0;    
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;    
+}
+  
+.form-wrapper #submit::-moz-focus-inner {
+    border: 0;
+}
+    /* Search panel style ends*/
+#middle {
+    height: 80%;
+}
