--- a/shared/styles/style.css
+++ b/shared/styles/style.css
@@ -1,111 +1,1 @@
-﻿html, body
-{
-    height: 100%;
-    margin-top:0px;
-    margin-bottom:0px;
-}
-#header {
-    background-color: #97C9DD;
-    color: white;
-    /*background-image: url('../../images/header.jpg');*/
-    text-align: center;
-    height:100px;
-}
-#header h1 {
-    margin:0px;
-    padding: 30px;
-
-}
-
-#nav {
-
-    background-color:#81A2C4;
-    height:100%;
-    width:200px;
-    float:left;
-    padding:5px; 
-    color:white;
-    font-size:20px;
-    font-weight:bold;
-    line-height: 30px;
-}
-
-#section {
-    width: 79%;
-    float: left;
-    padding: 10px;
-}
-
-#footer {
-    background-color: #97C9DD;
-    color: white;
-    clear: both;
-    text-align: center;
-    padding: 5px;
-    height: 30px;
-}
-
-#footer p {
-    margin:0px;
-    padding-top:7px;
-}
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.menu {
-    margin-left: 30px;
-    padding-top: 50px;
-}
-
-    .menu li {
-        padding-bottom: 10px;
-    }
-
-a, a:visited, a.hover, a:active {
-    text-decoration: none;
-    color: inherit;
-}
-.menu li{
-    padding-bottom:10px;
-}
-
-.Table
-    {
-        display: table;
-    }
-    .Title
-    {
-        display: table-caption;
-        text-align: center;
-        font-weight: bold;
-        font-size: larger;
-    }
-    .Heading
-    {
-        display: table-row;
-        font-weight: bold;
-        text-align: center;
-        background-color:#97C9DD;
-    }
-    .Row
-    {
-        display: table-row;
-    }
-    .Cell
-    {
-        display: table-cell;
-        border: solid;
-        border-width: thin;
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-   
-#middle {
-    height: 80%;
-}
-    .menu li a:hover {
-        text-decoration:underline;
-    }
+﻿
