--- a/views/Customer.html
+++ b/views/Customer.html
@@ -1,6 +1,6 @@
 ﻿<div class="form-wrapper">
-    <input type="text" id="search" placeholder="Search for CSS3, HTML5, jQuery ..." required>
-    <input type="submit" value="go" id="submit">
+    <input type="text" id="search" placeholder="Search Customer" required ng-model="searchText">
+   <!-- <input type="submit" value="go" id="submit" ng-click="searchCustomer()">-->
 </div>
 <div class="Table" ng-controller="CustomerController">
     <div class="Heading">
@@ -23,7 +23,7 @@
             <p>Action</p>
         </div>
     </div>
-    <div class="Row" ng-repeat="customer in customerDetails">
+    <div class="Row" ng-repeat="customer in customerDetails | filter: searchText">
         <div class="Cell">
             <p>{{customer.CustomerName}}</p>
         </div>
