Log out function completed

--- a/shared/styles/style.css
+++ b/shared/styles/style.css
@@ -1,9 +1,7 @@
 ﻿#header {
-    /*background-color: #97C9DD;*/
     color: white;
     text-align: center;
     height: 100px;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#97c9dd+27,b3dde5+60,b3dde5+60 */
     background: rgb(151,201,221); /* Old browsers */
     background: -moz-linear-gradient(top, rgba(151,201,221,1) 27%, rgba(179,221,229,1) 60%, rgba(179,221,229,1) 60%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, rgba(151,201,221,1) 27%,rgba(179,221,229,1) 60%,rgba(179,221,229,1) 60%); /* Chrome10-25,Safari5.1-6 */
@@ -36,7 +34,6 @@ background: white;
 }
 
 #nav {
-    /*background-color: #81A2C4;*/
     width: 200px;
     float: left;
     padding: 5px;
@@ -45,13 +42,6 @@ background: white;
     font-weight: bold;
     height: 100%;
     line-height: 30px;
-    /*background-color: #0066A6;*/
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1e5799+0,2989d8+45,207cca+95,7db9e8+100 */
-    /*background: rgb(30,87,153);*/ /*Old browsers */
-    /*background: -moz-linear-gradient(top, rgba(30,87,153,1) 0%, rgba(41,137,216,1) 45%, rgba(32,124,202,1) 95%, rgba(125,185,232,1) 100%);  FF3.6-15*/ 
-    /*background: -webkit-linear-gradient(top, rgba(30,87,153,1) 0%,rgba(41,137,216,1) 45%,rgba(32,124,202,1) 95%,rgba(125,185,232,1) 100%);  Chrome10-25,Safari5.1-6*/ 
-    /*background: linear-gradient(to bottom, rgba(30,87,153,1) 0%,rgba(41,137,216,1) 45%,rgba(32,124,202,1) 95%,rgba(125,185,232,1) 100%);  W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+*/ 
-    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 );  IE6-9*/ 
 }
 
 #section {
@@ -69,8 +59,7 @@ background: white;
     clear: both;
     text-align: center;
     padding: 5px;
-    height: 30px;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#97c9dd+27,b3dde5+60,b3dde5+60 
+    height: 30px; 
     background: rgb(151,201,221); /* Old browsers */
     background: -moz-linear-gradient(top, rgba(151,201,221,1) 27%, rgba(179,221,229,1) 60%, rgba(179,221,229,1) 60%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, rgba(151,201,221,1) 27%,rgba(179,221,229,1) 60%,rgba(179,221,229,1) 60%); /* Chrome10-25,Safari5.1-6 */
@@ -112,7 +101,6 @@ a, a:visited, a.hover, a:active {
     width:100%;
     background-color: #81A2C4;
     background-color: #0066A6;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1e5799+0,2989d8+45,207cca+95,7db9e8+100 */
     background: rgb(30,87,153); /* Old browsers */
     background: -moz-linear-gradient(top, rgba(30,87,153,1) 0%, rgba(41,137,216,1) 45%, rgba(32,124,202,1) 95%, rgba(125,185,232,1) 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, rgba(30,87,153,1) 0%,rgba(41,137,216,1) 45%,rgba(32,124,202,1) 95%,rgba(125,185,232,1) 100%); /* Chrome10-25,Safari5.1-6 */
@@ -220,11 +208,7 @@ a, a:visited, a.hover, a:active {
     font-weight: bold;
     text-align: center;
     border-width: 0px;
-    /*padding: 8px;*/
-    /*border-style: solid;*/
-    /*border-color: #AAA;*/
     background-color: #0066A6;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1e5799+0,2989d8+45,207cca+95,7db9e8+100 */
     background: rgb(30,87,153); /* Old browsers */
     background: -moz-linear-gradient(top, rgba(30,87,153,1) 0%, rgba(41,137,216,1) 45%, rgba(32,124,202,1) 95%, rgba(125,185,232,1) 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, rgba(30,87,153,1) 0%,rgba(41,137,216,1) 45%,rgba(32,124,202,1) 95%,rgba(125,185,232,1) 100%); /* Chrome10-25,Safari5.1-6 */
@@ -292,7 +276,7 @@ a, a:visited, a.hover, a:active {
 }
 
 #loginContent {
-    /*margin-left: 111%;*/
+    margin-left: -141px;
     width: 327px;
     height: 290px;
     background-color: aliceblue;
@@ -460,3 +444,10 @@ table.gridtable {
 
 
     /* Search panel style ends*/
+
+#welcome_message {
+    margin: 170px;
+    margin-left: 300px;
+    font-size: -webkit-xxx-large;
+    color: cornflowerblue;
+}
