--- a/shared/styles/style.css
+++ b/shared/styles/style.css
@@ -192,6 +192,10 @@ a, a:visited, a.hover, a:active {
     margin-right: 28px;
     margin-left: 25px;
 }
+
+.daily_status_heading{
+    margin-left: -7px;
+}
 /***************************** Table Style *******************************/
 .Table {
     display: table;
@@ -276,11 +280,12 @@ a, a:visited, a.hover, a:active {
 }
 
 #loginContent {
-    margin-left: -141px;
+   margin-left: -144px;
     width: 327px;
     height: 290px;
     background-color: aliceblue;
     border: groove;
+    margin-top: 44px;
 }
 
 .error {
