--- a/shared/styles/style.css
+++ b/shared/styles/style.css
@@ -14,24 +14,26 @@
         padding-top: 30px;
     }
 
-    #container {
-width: 100%;
-background: white;
- }
+#container {
+    width: 100%;
+    background: white;
+}
 
-.welcome{
+.welcome {
     float: right;
     padding-right: 30px;
 }
-.welcome span{
-    margin-right:35px;
-    font-size: 16px;
-    font-weight: bold;
-}
-.welcome a{
-    font-size: 18px;
-    font-weight: bold;
-}
+
+    .welcome span {
+        margin-right: 35px;
+        font-size: 16px;
+        font-weight: bold;
+    }
+
+    .welcome a {
+        font-size: 18px;
+        font-weight: bold;
+    }
 
 #nav {
     width: 200px;
@@ -48,9 +50,9 @@ background: white;
     width: 78%;
     float: right;
     padding: 10px;
-    background:white;
-    padding-left:54px;
-    min-height:500px;
+    background: white;
+    padding-left: 54px;
+    min-height: 500px;
 }
 
 #footer {
@@ -59,7 +61,7 @@ background: white;
     clear: both;
     text-align: center;
     padding: 5px;
-    height: 30px; 
+    height: 30px;
     background: rgb(151,201,221); /* Old browsers */
     background: -moz-linear-gradient(top, rgba(151,201,221,1) 27%, rgba(179,221,229,1) 60%, rgba(179,221,229,1) 60%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, rgba(151,201,221,1) 27%,rgba(179,221,229,1) 60%,rgba(179,221,229,1) 60%); /* Chrome10-25,Safari5.1-6 */
@@ -98,14 +100,15 @@ a, a:visited, a.hover, a:active {
 }
 
 #middle {
-    width:100%;
+    width: 100%;
     background-color: #81A2C4;
     background-color: #0066A6;
     background: rgb(30,87,153); /* Old browsers */
     background: -moz-linear-gradient(top, rgba(30,87,153,1) 0%, rgba(41,137,216,1) 45%, rgba(32,124,202,1) 95%, rgba(125,185,232,1) 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, rgba(30,87,153,1) 0%,rgba(41,137,216,1) 45%,rgba(32,124,202,1) 95%,rgba(125,185,232,1) 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom, rgba(30,87,153,1) 0%,rgba(41,137,216,1) 45%,rgba(32,124,202,1) 95%,rgba(125,185,232,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 );  IE6-9*
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 );
+    IE6-9 *;
 }
 
 .menu li a:hover {
@@ -125,7 +128,6 @@ a, a:visited, a.hover, a:active {
     display: inline-grid;
     width: 200px;
     padding-top: 30px;
-
 }
 
 #dailystatuscontainer {
@@ -193,7 +195,7 @@ a, a:visited, a.hover, a:active {
     margin-left: 25px;
 }
 
-.daily_status_heading{
+.daily_status_heading {
     margin-left: -7px;
 }
 /***************************** Table Style *******************************/
@@ -257,7 +259,10 @@ a, a:visited, a.hover, a:active {
     margin-left: 25%;
     border-radius: 8px;
     height: 23px;
+    outline: none;
 }
+
+
 
 #password {
     padding-left: 5px;
@@ -265,6 +270,7 @@ a, a:visited, a.hover, a:active {
     margin-left: 25%;
     border-radius: 8px;
     height: 23px;
+    outline: none;
 }
 
 #loginsubmit {
@@ -277,10 +283,11 @@ a, a:visited, a.hover, a:active {
     display: inline-block;
     font-size: 14px;
     border-radius: 8px;
+    outline: none;
 }
 
 #loginContent {
-   margin-left: -144px;
+    margin-left: -144px;
     width: 327px;
     height: 290px;
     background-color: aliceblue;
@@ -345,13 +352,11 @@ table.gridtable {
 .vacation_table_cell {
     width: 210px;
     height: 50px;
-    
 }
 
 .vacation_table_cell_daysNo {
     width: 150px;
     height: 50px;
-    
 }
 
 
@@ -359,7 +364,7 @@ table.gridtable {
 .vaction_remain_text {
     height: 50px;
     width: 400px;
-    float:left;
+    float: left;
 }
 
 .vacation_dropdown {
@@ -399,8 +404,8 @@ table.gridtable {
     border-radius: 8px;
 }
 
- /* Search panel style starts*/
-    .form-wrapper {
+/* Search panel style starts*/
+.form-wrapper {
     width: 344px;
     padding: 8px;
     margin: 20px auto;
@@ -409,46 +414,46 @@ table.gridtable {
     border-style: solid;
     border-color: #dedede #bababa #aaa #bababa;
     box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444;
-    border-radius: 10px;    
+    border-radius: 10px;
     background-color: #f6f6f6;
     background-image: linear-gradient(top, #f6f6f6, #eae8e8);
-    float:left;
+    float: left;
 }
 
-.form-wrapper #search {
-    width: 330px;
-    height: 20px;
-    padding: 10px 5px;
-    float: left;    
-    font: bold 16px 'lucida sans', 'trebuchet MS', 'Tahoma';
-    border: 1px solid #ccc;
-    box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #fff;
-    border-radius: 3px;      
-}
+    .form-wrapper #search {
+        width: 330px;
+        height: 20px;
+        padding: 10px 5px;
+        float: left;
+        font: bold 16px 'lucida sans', 'trebuchet MS', 'Tahoma';
+        border: 1px solid #ccc;
+        box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #fff;
+        border-radius: 3px;
+    }
 
-.form-wrapper #search:focus {
-    outline: 0; 
-    border-color: #aaa;
-    box-shadow: 0 1px 1px #bbb inset;  
-}
+        .form-wrapper #search:focus {
+            outline: 0;
+            border-color: #aaa;
+            box-shadow: 0 1px 1px #bbb inset;
+        }
 
-.form-wrapper #search::-webkit-input-placeholder {
-   color: #999;
-   font-weight: normal;
-}
+        .form-wrapper #search::-webkit-input-placeholder {
+            color: #999;
+            font-weight: normal;
+        }
 
-.form-wrapper #search:-moz-placeholder {
-    color: #999;
-    font-weight: normal;
-}
+        .form-wrapper #search:-moz-placeholder {
+            color: #999;
+            font-weight: normal;
+        }
 
-.form-wrapper #search:-ms-input-placeholder {
-    color: #999;
-    font-weight: normal;
-} 
+        .form-wrapper #search:-ms-input-placeholder {
+            color: #999;
+            font-weight: normal;
+        }
 
 
-    /* Search panel style ends*/
+/* Search panel style ends*/
 
 #welcome_message {
     margin: 170px;
