Added a field in Loginservice, modified daily status controller

--- a/shared/styles/style.css
+++ b/shared/styles/style.css
@@ -171,6 +171,7 @@ a, a:visited, a.hover, a:active {
     display: inline-block;
     font-size: 14px;
     border-radius: 8px;
+    outline: none;
 }
 
 #dailystatuscontainer .daily_status_dropdown {
@@ -197,6 +198,13 @@ a, a:visited, a.hover, a:active {
 
 .daily_status_heading {
     margin-left: -7px;
+}
+
+.error_msg {
+    width: 165px;
+    margin-left: 187px;
+    padding-left: 281px;
+    color: red;
 }
 /***************************** Table Style *******************************/
 .Table {
