--- a/shared/styles/style.css
+++ b/shared/styles/style.css
@@ -118,7 +118,7 @@ a, a:visited, a.hover, a:active {
 #dailystatuscontainer label {
     display: inline-block;
     width: 92px;
-    padding-right: 95px;
+    padding-right: 92px;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 25px;
@@ -139,7 +139,7 @@ a, a:visited, a.hover, a:active {
     padding-left: 25px;
     border: groove;
     padding-right: 25px;
-    margin-right: 24px;
+    margin-right: 2%;
     margin-left: -5px;
 }
 
@@ -147,7 +147,8 @@ a, a:visited, a.hover, a:active {
     margin-top: 20px;
     margin-left: -8px;
     margin-bottom: 17px;
-    margin-right: 27px;
+   margin-right: 2%;
+    padding-right: 2px;
 }
 
 #vacation_list {
@@ -181,14 +182,14 @@ a, a:visited, a.hover, a:active {
 }
 
 #dailystatuscontainer #hour {
-    width: 50px;
-    margin-right: 10px;
+    width: 48px;
+    margin-right: 8px;
 }
 
 #dailystatuscontainer #min {
-    width: 50px;
-    margin-left: 6px;
-    margin-right: 10px;
+    width: 48px;
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 #dailystatuscontainer textarea {
