--- a/views/dailystatus.html
+++ b/views/dailystatus.html
@@ -8,32 +8,29 @@
             <label>Time Spend</label>
         </div>
         <div>
-            <select name="date" class="daily_status_dropdown" data-ng-model="dateList[7]" ng-options="option as option|date:'dd/MM/yyyy' for option in dateList" id="date">
-                <option value="">Select...</option>
-            </select>
-            <select name="projectName" class="daily_status_dropdown" data-ng-model="project[0].ProjectID" ng-options="option.ProjectID as option.ProjectName for option in project" id="projectName">
-                
-            </select>
+            <select name="date" class="daily_status_dropdown" data-ng-model="dateList[7]" ng-options="option as option|date:'dd/MM/yyyy' for option in dateList" id="date"></select>
+
+            <select name="projectName" class="daily_status_dropdown" data-ng-model="project[0].ProjectID" ng-options="option.ProjectID as option.ProjectName for option in project" id="projectName"></select>
+
             <select name="activityType" class="daily_status_dropdown" data-ng-model="activityType" ng-options="option.ActivityTypeID as option.ActivityType for option in activity" id="activityType" required>
                 <option value="">Select...</option>
             </select>
 
+            <select name="hour" class="daily_status_dropdown" data-ng-model="hourList[8]" ng-options="option as option for option in hourList" id="hour"></select>
+            <span>hr</span>
 
-            <select name="hour" class="daily_status_dropdown" data-ng-model="hourList[8]" ng-options="option as option for option in hourList" id="hour">
-                <option value=""></option>
-            </select><span>hr</span>
-
-            <select name="min" class="daily_status_dropdown" data-ng-model="minList[0].value" ng-options="option.value as option.label for option in minList" id="min">
-                <option value=""></option>
-            </select><span>min</span>
+            <select name="min" class="daily_status_dropdown" data-ng-model="minList[0].value" ng-options="option.value as option.label for option in minList" id="min"></select>
+            <span>min</span>
         </div>
+
         <div>
             <span ng-show="dailystatusform.activityType.$error.required && (dailystatusform.activityType.$dirty || submitted)" class="error_msg">This field is required.</span>
-           
         </div>
+
         <div>
             <label class="daily_status_label1">Activity Description</label>
         </div>
+
         <div>
             <textarea type="text" ng-model="activitydescription" rows="4" cols="50"></textarea>
         </div>
