--- a/views/dailystatus.html
+++ b/views/dailystatus.html
@@ -8,23 +8,24 @@
             <label>Time Spend</label>
         </div>
         <div>
-            <select name="date" class="daily_status_dropdown" data-ng-model="dateList[7]" ng-options="option as option|date:'dd/MM/yyyy' for option in dateList" id="date"></select>
+            <select data-ng-options="option as option|date:'dd/MM/yyyy' for option in dateList" class="daily_status_dropdown" data-ng-model="selectedDate"></select>
 
-            <select name="projectName" class="daily_status_dropdown" data-ng-model="project[0].ProjectID" ng-options="option.ProjectID as option.ProjectName for option in project" id="projectName"></select>
-
-            <select name="activityType" class="daily_status_dropdown" data-ng-model="activityType" ng-options="option.ActivityTypeID as option.ActivityType for option in activity" id="activityType" required>
+            <select ng-options="option.ProjectName for option in project" class="daily_status_dropdown" ng-model="selectedProject">
+            </select>
+            
+            <select name="activityType" class="daily_status_dropdown" data-ng-model="activityType" ng-options="option.ActivityType for option in activity" id="activityType" required>
                 <option value="">Select...</option>
             </select>
 
-            <select name="hour" class="daily_status_dropdown" data-ng-model="hourList[8]" ng-options="option as option for option in hourList" id="hour"></select>
+            <select name="hour" class="daily_status_dropdown" data-ng-model="selectedHour" data-ng-options="option as option for option in hourList" id="hour"></select>
             <span>hr</span>
 
-            <select name="min" class="daily_status_dropdown" data-ng-model="minList[0].value" ng-options="option.value as option.label for option in minList" id="min"></select>
+            <select name="min" class="daily_status_dropdown" data-ng-model="selectedMinute" ng-options="option.label for option in minList" id="min"></select>
             <span>min</span>
         </div>
 
         <div>
-            <span ng-show="dailystatusform.activityType.$error.required && (dailystatusform.activityType.$dirty || submitted)" class="error_msg">This field is required.</span>
+            <span ng-show="dailystatusform.activityType.$error.required && (dailystatusform.activityType.$dirty || submitted)" class="error_msg" data-ng-attr-id="activityError">This field is required.</span>
         </div>
 
         <div>
@@ -60,7 +61,7 @@
         </div>
         <div class="Row" ng-repeat="dailystatus in dailystatuslist">
             <div class="Cell">
-                <p>{{dailystatus.ActivityDate}}</p>
+                <p>{{dailystatus.ActivityDate|date:'dd/MM/yyyy'}}</p>
             </div>
             <div class="Cell">
                 <p>{{dailystatus.ProjectName}}</p>
