--- a/shared/styles/style.css
+++ b/shared/styles/style.css
@@ -93,6 +93,7 @@ ul {
 a, a:visited, a.hover, a:active {
     text-decoration: none;
     color: inherit;
+    cursor: pointer;
 }
 
 .menu li {
@@ -136,18 +137,18 @@ a, a:visited, a.hover, a:active {
     background-color: #EFF4F9;
     padding-bottom: 25px;
     padding-top: 25px;
-    padding-left: 25px;
+    padding-left: 30px;
     border: groove;
     padding-right: 25px;
-    margin-right: 2%;
-    margin-left: -5px;
+    margin-right: 9px;
+    margin-left: 10px;
 }
 
-#daily_status_list {
+.daily_status_list {
     margin-top: 20px;
-    margin-left: -8px;
+    margin-left: 10px;
     margin-bottom: 17px;
-    margin-right: 2%;
+    margin-right: 12px;
     padding-right: 2px;
 }
 
@@ -198,7 +199,8 @@ a, a:visited, a.hover, a:active {
 }
 
 .daily_status_heading {
-    margin-left: -7px;
+    padding-top: 17px;
+    margin-left: 9px;
 }
 
 .error_msg {
@@ -212,6 +214,58 @@ a, a:visited, a.hover, a:active {
     margin-left: 25px;
     padding-left: 1px;
 }
+
+#dailystatusview ul {
+    float: left;
+    border-radius: 5px;
+    background-color: rgb(248,248,248);
+    margin-bottom: 12px;
+}
+
+#dailystatusview li {
+    float: left;
+    background-color: rgb(200,200,200);
+    padding: 5px 19px;
+    margin: 5px 2px 5px 0px;
+    color: black;
+    list-style: none;
+}
+
+    #dailystatusview li:hover, #dailystatusview li:hover a {
+        background-color: rgb(151,201,221);
+        color: white;
+    }
+
+    #dailystatusview li a {
+        text-decoration: none;
+        color: white;
+        text-shadow: 1px 0px 3px rgb(157, 157, 157);
+    }
+
+    #dailystatusview li:nth-child(1) {
+        border-radius: 4px 0px 0px 4px;
+        margin-left: 1px;
+    }
+
+    #dailystatusview li:nth-child(3) {
+        border-radius: 0px 4px 4px 0px;
+    }
+
+#dailystatusview .active {
+    background-color: #0066A6;
+}
+
+.dailystatusblock {
+    padding-top: 30px;
+}
+
+.tabstyle {
+    border: solid;
+    background-color: rgba(226, 229, 224, 0.5);
+    border-width: 1px;
+}
+
+/**********************************Daily Status style End*****************************/
 /***************************** Table Style *******************************/
 .Table {
     display: table;
@@ -254,7 +308,9 @@ a, a:visited, a.hover, a:active {
 .Heading .Cell p {
     color: white;
 }
-/**********************************Daily Status style End*****************************/
+
+
+
 
 
 /***************************************Login page************************************/
